fixing for name

--- a/pop-up/index.html
+++ b/pop-up/index.html
@@ -39,14 +39,14 @@
     <form id="loginForm"
           class="form form-group">
         <label class="form__label"
-               for="mochiEmail">Email address</label>
-        <input type="email"
-               autocomplete="email"
+               for="mochiname">Name</label>
+        <input type="name"
+               autocomplete="name"
                class="form__control form-control"
-               id="mochiEmailControl"
-               aria-describedby="emailHelp"
-               placeholder="Enter email">
-        <div id="errorEmail"
+               id="mochinameControl"
+               aria-describedby="nameHelp"
+               placeholder="Enter name">
+        <div id="errorName"
              class="form__error"></div>
         <label class="form__label"
                for="mochiPassword">Password</label>
